--- a/testapp/Components/Settings/Settings.storyboard
+++ b/testapp/Components/Settings/Settings.storyboard
@@ -1,63 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22155"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="PEd-7d-5j0">
             <objects>
-                <viewController storyboardIdentifier="SettingsViewController" id="bU7-R8-ocO" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingsViewController" id="bU7-R8-ocO" customClass="SettingsViewController" customModule="testapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="tOy-S4-hL0">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="448" height="231"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBb-nb-cHI">
-                                <rect key="frame" x="10" y="10" width="430" height="270"/>
+                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="37" horizontalPageScroll="10" verticalLineScroll="37" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rBb-nb-cHI">
+                                <rect key="frame" x="10" y="10" width="428" height="201"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <clipView key="contentView" id="waX-x0-ikC">
-                                    <rect key="frame" x="1" y="1" width="428" height="268"/>
+                                    <rect key="frame" x="1" y="1" width="426" height="199"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" headerView="VaV-Cs-CiA" id="yWw-A8-0aE">
-                                            <rect key="frame" x="0.0" y="0.0" width="428" height="240"/>
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="37" rowSizeStyle="automatic" headerView="VaV-Cs-CiA" viewBased="YES" id="yWw-A8-0aE" customClass="Set">
+                                            <rect key="frame" x="0.0" y="0.0" width="426" height="171"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="17" height="0.0"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="317" minWidth="40" maxWidth="1000" id="XPi-bb-iAC">
+                                                <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="414" minWidth="40" maxWidth="1000" id="XPi-bb-iAC">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                     </tableHeaderCell>
-                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Explicit CodingKey values in Codable types" id="HFE-v0-fGA">
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" id="HFE-v0-fGA">
                                                         <font key="font" metaFont="system"/>
-                                                        <string key="placeholderString">Explicit CodingKey values in Codable types
-</string>
                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
-                                                </tableColumn>
-                                                <tableColumn identifier="AutomaticTableColumnIdentifier.1" width="82" minWidth="40" maxWidth="1000" id="T7b-Wy-4Cm">
-                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
-                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                                    </tableHeaderCell>
-                                                    <buttonCell key="dataCell" type="check" bezelStyle="regularSquare" imagePosition="left" inset="2" id="SSg-yf-zfT">
-                                                        <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
-                                                        <font key="font" metaFont="system"/>
-                                                    </buttonCell>
-                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                    <prototypeCellViews>
+                                                        <tableCellView identifier="CustomCell" id="A1E-kQ-kvp" customClass="SettingsCustomTableViewCell" customModule="testapp" customModuleProvider="target">
+                                                            <rect key="frame" x="8" y="0.0" width="409" height="37"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <subviews>
+                                                                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="Cm1-2p-wQx">
+                                                                    <rect key="frame" x="3" y="5" width="388" height="16"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="cell text" id="RUI-8q-S6w">
+                                                                        <font key="font" usesAppearanceFont="YES"/>
+                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qel-8K-Zds">
+                                                                    <rect key="frame" x="392" y="3" width="18" height="18"/>
+                                                                    <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="AJg-ug-r9h">
+                                                                        <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                                                                        <font key="font" metaFont="system"/>
+                                                                    </buttonCell>
+                                                                </button>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="Cm1-2p-wQx" firstAttribute="trailing" secondItem="A1E-kQ-kvp" secondAttribute="trailing" constant="-20" id="1fE-GN-jco"/>
+                                                                <constraint firstItem="qel-8K-Zds" firstAttribute="leading" secondItem="Cm1-2p-wQx" secondAttribute="trailing" constant="5" id="7rP-61-kb2"/>
+                                                                <constraint firstItem="Cm1-2p-wQx" firstAttribute="leading" secondItem="A1E-kQ-kvp" secondAttribute="leading" constant="5" id="TvB-kV-Rq4"/>
+                                                                <constraint firstItem="Cm1-2p-wQx" firstAttribute="top" secondItem="A1E-kQ-kvp" secondAttribute="top" constant="16" id="gDs-cD-ULX"/>
+                                                                <constraint firstAttribute="bottom" secondItem="Cm1-2p-wQx" secondAttribute="bottom" constant="5" id="lJk-Wh-eih"/>
+                                                                <constraint firstAttribute="bottom" secondItem="qel-8K-Zds" secondAttribute="bottom" constant="5" id="wki-hy-mMk"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="checkBox" destination="qel-8K-Zds" id="Ci8-yO-Unp"/>
+                                                                <outlet property="settingsDescription" destination="Cm1-2p-wQx" id="Qmv-2c-6Rh"/>
+                                                                <outlet property="textField" destination="Cm1-2p-wQx" id="Z41-GV-4wF"/>
+                                                            </connections>
+                                                        </tableCellView>
+                                                    </prototypeCellViews>
                                                 </tableColumn>
                                             </tableColumns>
                                         </tableView>
                                     </subviews>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="0vw-Vq-qMD">
-                                    <rect key="frame" x="1" y="253" width="428" height="16"/>
+                                    <rect key="frame" x="1" y="212" width="426" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="K2M-eR-cIp">
@@ -65,18 +89,15 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <tableHeaderView key="headerView" wantsLayer="YES" id="VaV-Cs-CiA">
-                                    <rect key="frame" x="0.0" y="0.0" width="428" height="28"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="426" height="28"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="rBb-nb-cHI" firstAttribute="top" secondItem="tOy-S4-hL0" secondAttribute="top" constant="20" id="EV5-Me-8Ns"/>
-                            <constraint firstAttribute="trailing" secondItem="rBb-nb-cHI" secondAttribute="trailing" constant="10" id="PQE-nq-2qd"/>
-                            <constraint firstAttribute="bottom" secondItem="rBb-nb-cHI" secondAttribute="bottom" constant="10" id="UCX-T8-YkG"/>
-                            <constraint firstItem="rBb-nb-cHI" firstAttribute="leading" secondItem="tOy-S4-hL0" secondAttribute="leading" constant="10" id="lQg-mk-Op0"/>
-                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="yWw-A8-0aE" id="bgp-M0-6zH"/>
+                    </connections>
                 </viewController>
                 <customObject id="9uD-mB-xHs" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
